# bitvault-desktop

./: .dockerignore  .gitignore  .gitleaks.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.2  Makefile  README.md  SECURITY.md  build.md  build.rs  docker-compose.yaml  index.html  makefile  rebuild_and_run.sh  start.sh  trunk.toml
.cargo/: config.toml
.githooks/: pre-commit
Scripts/: install-githooks.sh
bitvault-app/: Cargo.toml  tauri.conf.json
bitvault-app/resources/: PLACE_LOGOS_HERE.md  README.md  com.bitvault.desktop.desktop
bitvault-app/src/: app.rs  lib.rs  main.rs  settings.rs
bitvault-app/src/models/: mod.rs  subscription.rs  transaction.rs  vault.rs
bitvault-app/src/services/: address_book.rs  biometric_service.rs  convenience_client.rs  key_service.rs  mempool_service.rs  mod.rs  network_check.rs  notification_service.rs  pcloud_backup.rs  screenshot_protection.rs  telegram_service.rs  tx_storage.rs  vault_service.rs
bitvault-app/src/state/: app_state.rs  async_commands.rs  mod.rs  navigation.rs  vault_data.rs
bitvault-app/src/ui/: mod.rs
bitvault-app/src/ui/address_book/: entry.rs  list.rs  mod.rs
bitvault-app/src/ui/advanced_settings/: backup_management.rs  fee_rate_setting.rs  mod.rs  utxo_selection.rs
bitvault-app/src/ui/components/: badge.rs  button.rs  card.rs  mod.rs  tabs.rs  theme.rs
bitvault-app/src/ui/dashboard/: mod.rs  settings_tab.rs  transaction_history.rs  vault_detail.rs
bitvault-app/src/ui/hardware_wallet/: batch_qr_scanner.rs  mod.rs  qr_display.rs  qr_scanner.rs
bitvault-app/src/ui/help/: mod.rs  question_detail.rs  question_list.rs
bitvault-app/src/ui/notification_center/: mod.rs  state.rs  view.rs
bitvault-app/src/ui/pin/: entry.rs  mod.rs  setup.rs  verification.rs
bitvault-app/src/ui/receive/: mod.rs
bitvault-app/src/ui/recovery/: mod.rs  recovery_flow.rs  utxo_refresh_flow.rs  utxo_selection.rs
bitvault-app/src/ui/secret_notification/: mod.rs  state.rs  view.rs
bitvault-app/src/ui/send_transaction/: mod.rs  steps.rs
bitvault-app/src/ui/settings/: mod.rs
bitvault-app/src/ui/subscription/: mod.rs  status_display.rs  validation.rs
bitvault-app/src/ui/transaction_detail/: mod.rs
bitvault-app/src/ui/vault_creation/: mod.rs  steps.rs
bitvault-app/src/ui/vault_selection/: mod.rs
bitvault-app/src/utils/: camera.rs  derivation.rs  icons.rs  images.rs  mod.rs  qr.rs  ur.rs
bitvault-app/tests/: async_operations_test.rs  backup_recovery_e2e_test.rs  bdk_wallet_operations_e2e_test.rs  convenience_service_integration_test.rs  e2e_test.rs  error_handling_e2e_test.rs  form_validation_test.rs  integration_test.rs  key_service_test.rs  mod.rs  pcloud_backup_test.rs  pin_e2e_test.rs  pin_state_machine_e2e_test.rs  priority2_workflow_e2e_test.rs  recovery_state_machine_e2e_test.rs  run_tests.sh  send_transaction_flow_e2e_test.rs  services_test.rs  settings_test.rs  state_management_test.rs  telegram_service_test.rs  test_helpers.rs  transaction_signing_e2e_test.rs  vault_creation_e2e_test.rs  vault_creation_state_machine_e2e_test.rs  vault_persistence_e2e_test.rs  vault_service_test.rs
bitvault-app/tests/mocks/: mod.rs
bitvault-common/: Cargo.toml  INTEGRATION.md  README.md
bitvault-common/docs/: index.md
bitvault-common/docs/architecture/: event_architecture.md  updated_architecture.md
bitvault-common/docs/key_management/: key_management_overview.md
bitvault-common/docs/platform/: platform_overview.md
bitvault-common/docs/security/: security_boundaries.md
bitvault-common/docs/utxo/: utxo_examples.md  utxo_implementation.md  utxo_management.md  utxo_testing.md
bitvault-common/resources/locales/: de-DE.ftl  en-US.ftl  es-ES.ftl  fr-FR.ftl  ja-JP.ftl  ko-KR.ftl  ru-RU.ftl  zh-CN.ftl
bitvault-common/src/: address_book.rs  config.rs  config_manager.rs  error.rs  events.rs  fee_estimation.rs  key_management.rs  lib.rs  localization.rs  logging.rs  math.rs  network_status.rs  platform.rs  types.rs  utxo_management.rs  utxo_selection.rs  validation.rs  wallet_operations.rs
bitvault-common/src/platform/: android.rs  capabilities.rs  error.rs  generic.rs  ios.rs  linux.rs  macos.rs  memory.rs  mock.rs  mod.rs  paths.rs  provider.rs  types.rs  windows.rs
bitvault-common/src/utxo_selection/: README.md  mod.rs  selector.rs  types.rs
bitvault-common/src/utxo_selection/strategies/: avoid_change.rs  base.rs  consolidate.rs  maximize_privacy.rs  minimize_change.rs  minimize_fee.rs  mod.rs  oldest_first.rs  privacy_focused.rs  utils.rs
bitvault-common/tests/: address_book_simple.rs  address_book_tests.rs  address_tests.rs  basic_test.rs  bdk_integration_tests.rs  bitcoin_amount_tests.rs  bitcoin_utils_tests.rs  category_test.rs  config_manager_tests.rs  config_tests.rs  consolidate_debug_test.rs  decrypt_debug_test.rs  diagnostic_test.rs  direct_file_test.rs  error_handling_test.rs  event_system_tests.rs  fee_estimation_tests.rs  file_diagnostic.rs  file_output_test.rs  fixed_key_tests.rs  integration_test.rs  key_encryption_test.rs  key_management_consolidated_test.rs  key_management_tests.rs  key_security_test.rs  log_test.rs  logging_tests.rs  math_extended_tests.rs  math_property_tests.rs  math_test.rs  math_tests.rs  maximize_privacy_test.rs  memory_security_test.rs  memory_security_tests.rs  minimal_crypto_test.rs  minimal_fee_test.rs  minimal_file_test.rs  minimal_key_test.rs  minimal_test.rs  mnemonic_test.rs  (+43 more)
bitvault-core/: Cargo.toml
bitvault-core/src/: crypto.rs  lib.rs
bitvault-ipc/: Cargo.toml
bitvault-ipc/src/: lib.rs
bitvault-ui/: Cargo.toml  README.md  trunk.toml
bitvault-ui/src/: app.rs  config.rs  crypto.rs  icons.rs  main.rs  wallet.rs
bitvault-ui/src/app/: assets.rs  screens.rs  state.rs
bitvault-ui/src/app/screens/: home.rs  lock.rs  onboarding.rs  seed.rs  wallet.rs
docs/: UI_MODERNIZATION_PLAN.md  index.md
resources/: PLACE_LOGOS_HERE.md  README.md
src/: app.rs  crypto.rs  icons.rs  lib.rs  main.rs  settings.rs  wallet.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
style/: styles.css
(+114 files in other folders)
