[workspace]
resolver = "2"
default-members = ["bitvault-ui"]
members = [
    "bitvault-ui",     # Current Leptos frontend
    "bitvault-core",   # Security-focused core component
    "bitvault-common", # Shared types and utilities
]

# Workspace-wide settings (shared by all members)
[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["BitVault Team", "Hunter Beast", "Secure Sovereign"]
repository = "https://github.com/BitVaulty/BitVaultWallet"

# Shared dependencies across workspace members
[workspace.dependencies]
# Common dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.86"
log = "0.4"

# Security-related dependencies
zeroize = "1.7.0"
getrandom = "0.3.1"
aes-gcm = "0.10.3"
rand = "0.9.0"
rand_core = "0.9.3"
argon2 = "0.5.2"
hex = "0.4.3"

# Optimization settings for all workspace members
[profile.release]
lto = false

# This is a key addition - define specific target configuration
[workspace.metadata.leptos]
# Components that can be built for wasm
wasm-components = ["bitvault-ui", "bitvault-core", "bitvault-common"]
