[workspace]
resolver = "2"
default-members = ["bitvault-app"]
members = [
    "bitvault-app",    # Main egui application
]

# Workspace-wide settings (shared by all members)
[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["BitVault Team"]
repository = "https://github.com/BitVaulty/bitvault-desktop"

# Shared dependencies across workspace members
[workspace.dependencies]
# Common dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.86"
log = "0.4"

# Security-related dependencies
zeroize = "1.7.0"
getrandom = "0.3.2"
aes-gcm = "0.10.3"
rand = "0.9.0"
rand_core = "0.9.3"
argon2 = "0.5.2"
hex = "0.4.3"

# Bitcoin dependencies (for reference, used in bitvault-app)
bdk = "0.30"
bitcoin = "0.32"
secp256k1 = "0.28"

# Error handling
thiserror = "1.0"
