[package]
name = "bitvault-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "BitVault Multi-Signature Wallet"

[lib]
name = "bitvault_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
# Use workspace shared dependencies
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true

# Tauri dependencies
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"

# Platform-specific dependencies
[target.'cfg(any(target_os = "linux", target_os = "windows", target_os = "macos"))'.dependencies]
tauri-plugin-theme = "2"

# Runtime
tokio = { version = "1", features = ["full"] }

# Internal workspace dependencies
bitvault-common = { path = "../bitvault-common" }

# Exclude from wasm32 builds
[package.metadata]
wasm-incompatible = true
