[package]
name = "bitvault-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "BitVault Multi-Signature Wallet"

[lib]
name = "bitvault_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
# Use workspace shared dependencies
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true

# Runtime
crossbeam = "0.8"

# Internal workspace dependencies
bitvault-common = { path = "../bitvault-common" }

# Exclude from wasm32 builds
[package.metadata]
wasm-incompatible = true
