[package]
name = "bitvault-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Shared types and utilities for BitVault wallet"

[dependencies]
# Use workspace shared dependencies
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
log.workspace = true

# Security-related dependencies that might be needed for common types
zeroize.workspace = true