[package]
name = "bitvault-common"
version = "0.1.0"
edition = "2021"
authors = ["BitVault Team"]
description = "Common types and utilities for the BitVault Bitcoin wallet"

# Define the run_all_tests binary
[[bin]]
name = "run_all_tests"
path = "tests/run_all_tests.rs"

[dependencies]
lazy_static = { workspace = true }

# Serialization/deserialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.5"
bincode = "1.3.3"    # Binary serialization for keys

# Error handling
thiserror = "1.0"
anyhow = { workspace = true }

# Bitcoin functionality
bdk = { workspace = true }  # Bitcoin Dev Kit for core Bitcoin operations
bitcoin = { workspace = true }

# Decimal math for Bitcoin amounts
rust_decimal = { version = "1.26", features = ["serde"] }
rust_decimal_macros = "1.26"

# Logging support
log = { workspace = true }
env_logger = "0.9"
chrono = { version = "0.4", features = ["serde"] }

# Memory security
zeroize = { workspace = true, features = ["zeroize_derive"] }  # Memory wiping to prevent key leakage

# Utilities
once_cell = "1.19"  # Thread-safe lazy initialization

# Cryptography 
argon2 = "0.5.0"      # Password hashing/key derivation
pbkdf2 = "0.12.0"     # Key derivation
hmac = "0.12.0"       # HMAC for PBKDF2
sha2 = "0.10.0"       # SHA-256 for PBKDF2
base64 = "0.13.0"     # Base64 encoding/decoding 
aes-gcm = "0.10.0"    # AES-GCM encryption for secure key storage
generic-array = "0.14.0"    # Required for AES-GCM
typenum = "1.15.0"    # Required for generic-array

# Cross-platform path handling
dirs = "4.0"
home = "0.5"
cfg-if = "1.0"

# Bitcoin-specific tools
hex = { workspace = true }
rand = { workspace = true }     # Secure random number generation

# Localization
fluent = { workspace = true }             # Mozilla's internationalization framework
unic-langid = { workspace = true }        # Language identifier handling

# Conditional dependencies for platform-specific features
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winerror", "winbase", "handleapi", "securitybaseapi", "fileapi", "memoryapi"] }

[features]
default = []
strict-memory = [] # Enable stricter memory safety checks
mobile-compat = [] # Enable mobile compatibility features

[dev-dependencies]
tempfile = "3.3"                # Temporary file creation for tests
criterion = "0.3"               # Benchmarking framework
quickcheck = "1.0"              # Property-based testing
quickcheck_macros = "1.0"       # Macros for property-based testing
lazy_static = { workspace = true }
ctor = "0.1.22"                # Constructor attribute for test initialization
log4rs = "1.2"                # Structured logging for tests

