[package]
name = "bitvault-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Secure core implementation for BitVault wallet"

[dependencies]
# Use workspace shared dependencies
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
log.workspace = true

# Security-related dependencies
zeroize.workspace = true
getrandom = "0.3.1"
rand = "0.9.0"
aes-gcm = "0.10.3"
argon2 = "0.5.2"

# Bitcoin-specific dependencies
bip39 = { version = "2.0.0", features = ["rand"] }

# Internal workspace dependencies
bitvault-common = { path = "../bitvault-common" }
bitvault-ipc = { path = "../bitvault-ipc" }