[package]
name = "bitvault-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Secure core implementation for BitVault wallet"

[dependencies]
# Use workspace shared dependencies
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
log.workspace = true

# Security-related dependencies
zeroize.workspace = true
getrandom.workspace = true
rand.workspace = true
aes-gcm.workspace = true
argon2.workspace = true
hex.workspace = true

# Crypto-specific dependencies
phc = "0.2.0"

# Bitcoin-specific dependencies
bip39 = { version = "2.0.0", features = ["rand"] }
