[package]
name = "bitvault-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Core dependencies
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
log.workspace = true

# Security
zeroize.workspace = true
aes-gcm.workspace = true
rand.workspace = true
argon2.workspace = true
getrandom.workspace = true

# Web/WASM specific
leptos = { version = "0.6.15", features = ["csr"] }
leptos_meta = "0.6.15"
leptos_router = { version = "0.6.15", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
parking_lot = "0.12.3"
serde-wasm-bindgen = "0.6"

# UI-specific dependencies
cfg-if = "1.0"
gloo-net = { version = "0.6", features = ["http"] }
hex = "0.4"
js-sys = "0.3"

# Logging
simple_logger = { version = "5.0", optional = true }
console_log = { version = "1", optional = true }
console_error_panic_hook = "0.1.7"

# Bitcoin
bip39 = { version = "2.0.0", features = ["rand"] }
phc = "0.2.0"

# Internal dependencies
bitvault-common = { path = "../bitvault-common" }
bitvault-ipc = { path = "../bitvault-ipc" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["console"] }
js-sys = "0.3"
getrandom = { workspace = true, features = ["wasm_js"] }