[package]
name = "bitvault-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Core dependencies
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
log.workspace = true
hex.workspace = true

# Security
zeroize.workspace = true
aes-gcm.workspace = true
rand.workspace = true
argon2.workspace = true
getrandom.workspace = true

# egui dependencies
eframe = "0.26.2"
egui = "0.26.2"
egui_extras = { version = "0.26.2", features = ["svg"] }
egui_plot = "0.26.2"

# Logging
simple_logger = "5.0"

# Bitcoin
bip39 = { version = "2.0.0", features = ["rand"] }
password-hash = "0.5.0"

# File system
dirs = "5.0.1"

# Image processing
image = "0.25.5"

# Internal dependencies
bitvault-core = { path = "../bitvault-core" }
toml = "0.8.20"
usvg = "0.45.0"
resvg = "0.45.0"
tiny-skia = "0.11.4"
