[package]
name = "bitvaulty"
version = "0.1.0"
description = "A Tauri App"
authors = ["Hunter Beast"]
edition = "2021"

[lib]
name = "bitvaulty_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
anyhow = "1.0.86"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"

# Bitcoin
bip39 = { version = "2.0.0", features = ["rand"] }

# Security
argon2 = "0.5.2"
getrandom = { version = "0.2", features = ["std"] }
serde-encrypt = "0.7.0"
zeroize = "1.7.0"

[target.'cfg(any(target_os = "linux", target_os = "windows", target_os = "macos"))'.dependencies]
tauri-plugin-theme = "2"
